@@ -14,6 +14,7 @@ ChangeLog
  * fix win32 build against win32 native gnu tools
  * compatibility fix: fix segv on shutdown when ionCube Loader is loaded
  * fixed undefined index for xcache.count=1 and xcache.var_size>1
+ * fix builtin constant memory leak on compile
 
 1.3.1 2010-11-27
 ========
